[package]
name = "rougelike"
version = "0.1.0"
authors = ["m-squared96 <michael.moore34@mail.dcu.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.9"
tcod = "0.15"

[dependencies.tcod-sys]
version = "*"
features = ["dynlib"]
